# OPENCRM

./: .dockerignore  .env  .env.example  .gitattributes  .gitignore  AGENTS.md  ARCHITECTURE.md  AUDIT.txt  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTEXT.md  CONTRIBUTING.md  Dockerfile  GITHUB_PUBLISH_CHECKLIST.md  Leads_SBL_Tampa.xlsx  PUBLICATION_SUMMARY.md  README.md  SECURITY.md  TODO.txt  bundle-size-ceilings.json  bundle-size.config.json  docker-compose.yml  docker-entrypoint.sh  eslint.config.mjs  gemini.md.txt  next.config.ts  package-lock.json  package.json  playwright.config.ts  pr_body.md  prisma.config.ts  tsconfig.json  vitest.config.ts
.claude/: settings.local.json
.claude/agents/: code-reviewer.md  main-software-engineer.md  pentest-specialist.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
Leads/: cleaning.csv  concrete.csv  fencing.csv  landscaping.csv  mobile_mechanics.csv  power_washing.csv  tree_removal.csv
docs/: mobile-performance-baseline.md
e2e/: crm.spec.ts
prisma/: dev.db  prisma.config.ts  schema.prisma  seed.ts
public/: landing.html
scraper/: requirements.txt
scripts/: backfill-org-id.ts  backfill-subscriptions.ts  check-bundle-size.ts  grant-superadmin.ts  import-leads.mjs  prepare-standalone.mjs
src/: middleware.ts  proxy.test.ts  proxy.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/frontend-placeholder/: index.html
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/lib/: ai.ts  (+32 more)
(+344 files in other folders)
